@@ -243,7 +243,7 @@ public class FileMethodsImpl implements FileMethods {
                         // Check for products with status "delete" in the transfer file and remove them from the main product list
                         List<Product> productsToDelete = transferProducts.stream()
                                 .filter(product -> product.getStatus().equalsIgnoreCase("delete"))
-                                .collect(Collectors.toList());
+                                .toList();
                         productList.removeAll(productsToDelete);
                     } else {
                         System.out.println("You chose [NO], You have not committed!");
@@ -281,8 +281,9 @@ public class FileMethodsImpl implements FileMethods {
             table.addCell(String.valueOf(productTransfer.getProductPrice()), cellStyle);
             table.addCell(String.valueOf(productTransfer.getDate()), cellStyle);
             table.addCell(productTransfer.getStatus(), cellStyle);
-            System.out.println(table.render());
+
         }
+        System.out.println(table.render());
     }
     @Override
     public void clearFileTransfer(String TRANSFER_FILE) {
